--- a/Client/BrzoDoLokacije/app/src/main/res/layout/activity_add_post.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/activity_add_post.xml
@@ -8,33 +8,32 @@
 
     <ImageSwitcher
         android:id="@+id/isActivityAddPostSwitcher"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/btnActivityAddPostUploadFromGallery"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/nextImage"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
+        android:layout_width="78dp"
+        android:layout_height="499dp"
         android:background="@drawable/rounded_transparent_button"
         android:gravity="right"
         android:padding="30dp"
         android:textColor="@color/material_dynamic_primary30"
         app:icon="@drawable/ic_baseline_arrow_forward"
         app:iconTint="#072242"
-        app:layout_constraintBottom_toTopOf="@+id/btnActivityAddPostUploadFromGallery"
+        app:layout_constraintBottom_toBottomOf="@+id/isActivityAddPostSwitcher"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/previousImage"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <Button
         android:id="@+id/previousImage"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
+        android:layout_width="70dp"
+        android:layout_height="497dp"
 
         android:background="@drawable/rounded_transparent_button"
         android:gravity="left"
@@ -42,7 +41,7 @@
         android:textColor="@color/material_dynamic_primary30"
         app:icon="@drawable/ic_baseline_arrow_back"
         app:iconTint="#0E283C"
-        app:layout_constraintBottom_toTopOf="@+id/btnActivityAddPostUploadFromGallery"
+        app:layout_constraintBottom_toBottomOf="@+id/isActivityAddPostSwitcher"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="SpeakableTextPresentCheck" />
@@ -51,23 +50,18 @@
         android:id="@+id/btnActivityAddPostUploadFromGallery"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="292dp"
         android:text="Otvori galeriju"
+        app:layout_constraintBottom_toTopOf="@+id/tvActivityAddPostLocationtext"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/isActivityAddPostSwitcher" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/tvActivityAddPostLocationtext"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
         android:text="Lokacija"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnActivityAddPostUploadFromGallery" />
+        app:layout_constraintBottom_toTopOf="@+id/etActivityAddPostLocation"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <EditText
         android:id="@+id/etActivityAddPostLocation"
@@ -76,36 +70,31 @@
         android:ems="10"
         android:hint="Reykjavik, Iceland"
         android:inputType="textEmailAddress"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvActivityAddPostLocationtext" />
+        app:layout_constraintBottom_toTopOf="@+id/tvActivityAddPostDescriptiontext"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/tvActivityAddPostDescriptiontext"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Opis"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etActivityAddPostLocation" />
+        app:layout_constraintBottom_toTopOf="@+id/etActivityAddPostDescription"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <EditText
         android:id="@+id/etActivityAddPostDescription"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_marginTop="4dp"
         android:ems="10"
         android:hint="Reykjavik, Iceland"
         android:inputType="textEmailAddress"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvActivityAddPostDescriptiontext" />
+        app:layout_constraintBottom_toTopOf="@+id/btnActivityAddPostPost"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
         android:id="@+id/btnActivityAddPostPost"
         android:layout_width="200dp"
         android:layout_height="40dp"
-        android:layout_marginBottom="16dp"
         android:background="@drawable/rounded_cyan_button"
         android:backgroundTint="#1C789A"
         android:text="Objavi"
