--- a/Client/BrzoDoLokacije/app/src/main/res/layout/activity_login_register.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/activity_login_register.xml
@@ -16,40 +16,37 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
+        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/gradient" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:background="@drawable/login_register_background_top_radius"
-
         android:id="@+id/linearLayout"
         android:layout_width="0dp"
-        android:layout_height="65dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
+        android:layout_marginTop="150dp"
         android:layout_marginEnd="50dp"
-        android:gravity="center|center_horizontal"
+        android:background="@drawable/login_register_background_top_radius"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toTopOf="@+id/flFragmentActivityLRFragmentsView"
+        android:padding="20dp"
         app:layout_constraintEnd_toEndOf="@+id/imageView2"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0">
+        app:layout_constraintTop_toTopOf="@+id/imageView2">
 
         <ImageView
             android:id="@+id/imageView5"
-            android:layout_width="280dp"
+            android:layout_width="250dp"
             android:layout_height="40dp"
             android:background="@drawable/rounded_white_button_login"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.37"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0"></ImageView>
+            app:layout_constraintTop_toTopOf="parent"></ImageView>
 
         <android.widget.Button
             android:id="@+id/btnFragmentActivityLRLogin"
-            android:layout_width="139dp"
+            android:layout_width="120dp"
             android:layout_height="40dp"
             android:background="@drawable/rounded_cyan_button"
             android:elevation="25dp"
@@ -59,19 +56,20 @@
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="@+id/imageView5"
             app:layout_constraintEnd_toStartOf="@+id/btnFragmentActivityLRRegister"
-            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/imageView5"
-            app:layout_constraintTop_toTopOf="@+id/imageView5" />
+            app:layout_constraintTop_toTopOf="@+id/imageView5"
+            app:layout_constraintVertical_bias="0.0" />
 
         <android.widget.Button
             android:id="@+id/btnFragmentActivityLRRegister"
-            android:layout_width="140dp"
+            android:layout_width="120dp"
             android:layout_height="40dp"
-            android:textColor="#FF1C789A"
             android:background="@drawable/rounded_transparent_button"
             android:elevation="25dp"
             android:padding="0dp"
             android:text="Registruj se"
+            android:textColor="#FF1C789A"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/imageView5"
             app:layout_constraintTop_toTopOf="@+id/imageView5"
@@ -87,12 +85,10 @@
         android:layout_marginEnd="50dp"
         android:background="@drawable/login_register_background_bottom_radius"
         android:elevation="20dp"
-        android:foregroundGravity="center_vertical|center"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView2"
-        app:layout_constraintVertical_bias="0.411">
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
 
     </FrameLayout>
