--- a/Client/BrzoDoLokacije/app/src/main/res/values/dimens.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/values/dimens.xml
@@ -1,3 +1,6 @@
 <resources>
       <dimen name="fab_margin">16dp</dimen>
+    <dimen name="text_padding">5dp</dimen>
+    <dimen name="header1_size">20dp</dimen>
+    <dimen name="component_padding">10dp</dimen>
    </resources>
